[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DEFAULT_PKG"
version = "0.0.0"
authors = [
  { name="Ishan Gaur", email="ishangaur4@gmail.com" },
]
description = "Trying to help the neural network denoiser learn consistent conditionals"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ishan-gaur/consistency-loss"
